--- a/directories/fiware-summit/agenda/filters.html
+++ b/directories/fiware-summit/agenda/filters.html
@@ -58,6 +58,7 @@
       <option value="*">Sessions</option>
           <option value='connection-to-iot'>Connection to IoT</option>
           <option value='fiware-catalog-components'>FIWARE Catalog Components</option>
+          <option value='machine-learning'>Machine Learning</option>
           <option value='ngsi-ld-basics'>NGSI-LD Basics</option>
           <option value='security---distributed-trust'>Security &amp; Distributed Trust</option>
     </select>
