--- a/directories/fiware-summit/agenda/program/sitemap.html
+++ b/directories/fiware-summit/agenda/program/sitemap.html
@@ -68,7 +68,6 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/break.html">Break</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/signing-ceremony.html">Signing Ceremony</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/best-fiware-use-cases-around-the-world.html">Best FIWARE Use Cases Around the World</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/integration-blockchain---fiware-for-dlts-and-trust.html">Integration Blockchain - FIWARE for DLTs and Trust</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/lunch.html">Lunch</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/crowd-management---event-security.html">Crowd Management &amp; Event Security</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/digital-twins.html">Digital Twins</a></li>
@@ -87,10 +86,13 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/welcome-coffee.html">Welcome Coffee</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/business-related.html">Business Related</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/concepts-of-basic-security.html">Concepts of Basic Security</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/how-fiware-ecosystem-boost-mlops-best-practices.html">How FIWARE Ecosystem boost MLOps best practices</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/innovation-projects-on-data-sharing-in-cities.html">Innovation projects on data sharing in cities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/trust-services-for-data-spaces.html">Trust Services for Data Spaces</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/integration-of-llms-in-fiware-solutions.html">Integration of LLMs in FIWARE solutions</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/innovation-projects-on-industrial-data-and-robots.html">Innovation projects on industrial data and robots</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/introduction-to-data-spaces-connector-components.html">Introduction to Data Spaces connector components</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/integration-blockchain---fiware-for-dlts-and-trust.html">Integration Blockchain - FIWARE for DLTs and Trust</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/break.html">Break</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/fiware-scientific-advisory-board.html">FIWARE Scientific Advisory Board</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/data-spaces-technology.html">Data Spaces Technology</a></li>
@@ -98,6 +100,8 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/ai---ml.html">AI &amp; ML</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/closing.html">Closing</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/robotics.html">Robotics</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/practical-5---talking-with-your-smart-solution.html">Practical 5 - Talking with your Smart Solution</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/practical-6---yamls-in-fiware--yet-another-classical-ml-solution-in-fiware.html">Practical 6 - YAMLs in FIWARE: Yet Another classical ML solution in FIWARE</a></li>
 	</ul>
 </body>
 </html>
