speakers content updates

--- a/directories/fiware-summit/speakers/filters.html
+++ b/directories/fiware-summit/speakers/filters.html
@@ -175,6 +175,7 @@
                         <option value='coordinator'>Coordinator</option>
                         <option value='cto'>CTO</option>
                         <option value='demonstrator-manager'>Demonstrator Manager</option>
+                        <option value='deputy-head-of-unit'>Deputy Head of Unit</option>
                         <option value='deputy-head-of-unit'>Deputy-Head of Unit</option>
                         <option value='designer'>Designer</option>
                         <option value='developer'>Developer</option>
