Add timezone for online events

--- a/directories/events-directory/events.html
+++ b/directories/events-directory/events.html
@@ -204,7 +204,7 @@
         <a href="./event-details/?id=202406-advanced-ngsi-ld-registrations---using-ngsi-ld-in-a--system-of-systems--approach">  
           <div class="panel-info">
             <div class="date-time">
-              <span class="time">10:00 am – 11:00 am</span>
+              <span class="time">10:00 am – 11:00 am CEST</span>
             </div>
           </div>
         </a>
@@ -263,7 +263,7 @@
         <a href="./event-details/?id=202406-fiware-data-spaces---a-practical-introduction-into-roles-and-components">  
           <div class="panel-info">
             <div class="date-time">
-              <span class="time">10:00 am – 11:00 am</span>
+              <span class="time">10:00 am – 11:00 am CEST</span>
             </div>
           </div>
         </a>
@@ -322,7 +322,7 @@
         <a href="./event-details/?id=202406-leveraging-ngsi-in-university-courses">  
           <div class="panel-info">
             <div class="date-time">
-              <span class="time">10:00 am – 11:00 am</span>
+              <span class="time">10:00 am – 11:00 am CEST</span>
             </div>
           </div>
         </a>
@@ -460,7 +460,7 @@
         <a href="./event-details/?id=202407-creating-combined-ngsi-v2-ngsi-ld-data-spaces">  
           <div class="panel-info">
             <div class="date-time">
-              <span class="time">10:00 am – 11:00 am</span>
+              <span class="time">10:00 am – 11:00 am CEST</span>
             </div>
           </div>
         </a>
@@ -519,7 +519,7 @@
         <a href="./event-details/?id=202407-advanced-dashboards-with-wirecloud-2-0">  
           <div class="panel-info">
             <div class="date-time">
-              <span class="time">10:00 am – 11:00 am</span>
+              <span class="time">10:00 am – 11:00 am CEST</span>
             </div>
           </div>
         </a>
@@ -584,7 +584,7 @@
         <a href="./event-details/?id=202409-enhancing-tourism-with-smart-technologies--integrating-fiware-and-large-language-models">  
           <div class="panel-info">
             <div class="date-time">
-              <span class="time">10:00 am – 11:00 am</span>
+              <span class="time">10:00 am – 11:00 am CEST</span>
             </div>
           </div>
         </a>
@@ -803,7 +803,7 @@
         <a href="./event-details/?id=202410-fiware-data-space-technologies-webinar--1--fiware-vision-on-data-spaces">  
           <div class="panel-info">
             <div class="date-time">
-              <span class="time">3:30 pm – 5:00 pm</span>
+              <span class="time">3:30 pm – 5:00 pm CET</span>
             </div>
           </div>
         </a>
@@ -931,7 +931,7 @@
         <a href="./event-details/?id=202411-fiware-data-space-technologies-webinar--2--decentralized-iam-based-on-verifiable-credentials-and-odrl">  
           <div class="panel-info">
             <div class="date-time">
-              <span class="time">3:30 pm – 5:00 pm</span>
+              <span class="time">3:30 pm – 5:00 pm CET</span>
             </div>
           </div>
         </a>
@@ -990,7 +990,7 @@
         <a href="./event-details/?id=202411-fiware-data-space-technologies-webinar--3--contract-negotiation-in-data-spaces">  
           <div class="panel-info">
             <div class="date-time">
-              <span class="time">3:30 pm – 5:00 pm</span>
+              <span class="time">3:30 pm – 5:00 pm CET</span>
             </div>
           </div>
         </a>
@@ -1049,7 +1049,7 @@
         <a href="./event-details/?id=202411-fiware-data-space-technologies-webinar--4--deploying-a-fiware-data-space-connector">  
           <div class="panel-info">
             <div class="date-time">
-              <span class="time">3:30 pm – 5:00 pm</span>
+              <span class="time">3:30 pm – 5:00 pm CET</span>
             </div>
           </div>
         </a>
@@ -1108,7 +1108,7 @@
         <a href="./event-details/?id=202411-transforming---exploiting-high-value-datasets--synergies-in-eu-open-data-projects">  
           <div class="panel-info">
             <div class="date-time">
-              <span class="time">10:00 am – 12:00 pm</span>
+              <span class="time">10:00 am – 12:00 pm CET</span>
             </div>
           </div>
         </a>
@@ -1151,7 +1151,7 @@
         <a href="./event-details/?id=202411-fiware-data-space-technologies-webinar--5--ongoing-and-future-work">  
           <div class="panel-info">
             <div class="date-time">
-              <span class="time">3:30 pm – 5:00 pm</span>
+              <span class="time">3:30 pm – 5:00 pm CET</span>
             </div>
           </div>
         </a>
@@ -1223,7 +1223,7 @@
         <a href="./event-details/?id=202411-fiware-data-space-technologies-webinar--6--reference-use-case">  
           <div class="panel-info">
             <div class="date-time">
-              <span class="time">3:30 pm – 5:00 pm</span>
+              <span class="time">3:30 pm – 5:00 pm CET</span>
             </div>
           </div>
         </a>
@@ -1398,7 +1398,7 @@
         <a href="./event-details/?id=202412-onboarding-companies-and-offerings-publication-on-the-dome-marketplace-">  
           <div class="panel-info">
             <div class="date-time">
-              <span class="time">11:00 am – 12:15 pm</span>
+              <span class="time">11:00 am – 12:15 pm CET</span>
             </div>
           </div>
         </a>
@@ -1698,7 +1698,7 @@
         <a href="./event-details/?id=202502-battery-pass-closing-event">  
           <div class="panel-info">
             <div class="date-time">
-              <span class="time">9:00 am – 4:00 pm</span>
+              <span class="time">9:00 am – 4:00 pm CET</span>
             </div>
           </div>
         </a>
@@ -1912,7 +1912,7 @@
         <a href="./event-details/?id=202503-solving-the-challenges-of-distributed-operations-within-data-spaces">  
           <div class="panel-info">
             <div class="date-time">
-              <span class="time">10:00 am – 11:00 am</span>
+              <span class="time">10:00 am – 11:00 am CET</span>
             </div>
           </div>
         </a>
@@ -2024,7 +2024,7 @@
         <a href="./event-details/?id=202504-intro-to-fgs25">  
           <div class="panel-info">
             <div class="date-time">
-              <span class="time">2:30 pm – 3:30 pm</span>
+              <span class="time">2:30 pm – 3:30 pm CEST</span>
             </div>
           </div>
         </a>
@@ -2096,7 +2096,7 @@
         <a href="./event-details/?id=202504-support-for-the-dataspace-protocol--dsp--in-the-fiware-data-space-connector">  
           <div class="panel-info">
             <div class="date-time">
-              <span class="time">10:00 am – 11:00 am</span>
+              <span class="time">10:00 am – 11:00 am CEST</span>
             </div>
           </div>
         </a>
@@ -2270,7 +2270,7 @@
         <a href="./event-details/?id=202504-letting-your-chatbot-have-a-friendly-talk-with-the-context-broker">  
           <div class="panel-info">
             <div class="date-time">
-              <span class="time">10:00 am – 11:00 am</span>
+              <span class="time">10:00 am – 11:00 am CEST</span>
             </div>
           </div>
         </a>
