--- a/directories/webinars/webinars.html
+++ b/directories/webinars/webinars.html
@@ -16,8 +16,8 @@
                     <span class='name'>50 mins</span>
                 </div>
                 <div class='label-difficulty'>
-                    <span class='difficulty hidden'>3</span>
-                    <span class="star">★ ★ ★ </span>
+                    <span class='difficulty hidden'>4</span>
+                    <span class="star">★ ★ ★ ★ </span>
                 </div>
                 <div>
                     <span class='season hidden'>12.3</span>
