fgs 25 sponsors first upload

--- a/directories/fiware-summit/sponsors/filters.html
+++ b/directories/fiware-summit/sponsors/filters.html
@@ -14,14 +14,9 @@
             <label for='filterRole' class='dropdown-label'>Type</label>
             <select name='filterRole' id='filterRole'>
                 <option value='*'>All Types</option>
-                        <option value='exhibitor'>Exhibitor</option>
                         <option value='hosting-partner'>Hosting Partner</option>
                         <option value='media-partner'>Media Partner</option>
-                        <option value='official-partner'>Official Partner</option>
-                        <option value='premier-sponsor'>Premier Sponsor</option>
                         <option value='sponsor'>Sponsor</option>
-                        <option value='strategic-alliance'>Strategic Alliance</option>
-                        <option value='under-the-patronage'>Under the patronage</option>
             </select>
         </div>
 
@@ -29,28 +24,13 @@
             <label for='filterCompany' class='dropdown-label'>Sponsor</label>
             <select name='filterCompany' id='filterCompany'>
                 <option value='*'>All Sponsors</option>
-                        <option value='beopen'>BeOpen</option>
-                        <option value='cities-today'>Cities Today</option>
-                        <option value='club-globals'>Club Globals</option>
-                        <option value='dome-project'>DOME Project</option>
-                        <option value='dsba'>DSBA</option>
-                        <option value='enershare'>Enershare</option>
-                        <option value='european-space-agency'>European Space Agency</option>
-                        <option value='infiniti-mondi'>Infiniti Mondi</option>
                         <option value='iot-global-network'>Iot Global Network</option>
                         <option value='iot-now'>Iot Now</option>
                         <option value='latitudo-40'>Latitudo 40</option>
-                        <option value='meditech'>Meditech</option>
-                        <option value='municipality-of-naples'>Municipality of Naples</option>
-                        <option value='opendatasoft'>Opendatasoft</option>
-                        <option value='pleiades'>Pleiades</option>
-                        <option value='rai-campania'>Rai Campania</option>
-                        <option value='renewable-matter'>Renewable Matter</option>
-                        <option value='smartcitiesworld'>SmartCitiesWorld</option>
-                        <option value='teamdev'>TeamDev</option>
-                        <option value='the-lisbon-council'>The Lisbon Council</option>
-                        <option value='the-smart-city-journal'>The Smart City Journal</option>
-                        <option value='ulsit'>ULSIT</option>
+                        <option value='meaningfy'>Meaningfy</option>
+                        <option value='senlab'>SenLab</option>
+                        <option value='smart-cities-world'>Smart Cities World</option>
+                        <option value='um6p'>UM6P</option>
             </select>
         </div>
 
