--- a/directories/events-directory/filters.html
+++ b/directories/events-directory/filters.html
@@ -71,6 +71,7 @@
         <select id='filterDomain'>
             <option value='*'>All categories</option>
                 <option value='ai'>AI</option>
+                <option value='climate-change'>Climate Change</option>
                 <option value='data-sharing'>Data Sharing</option>
                 <option value='data-spaces'>Data Spaces</option>
                 <option value='digital-product-passport'>Digital Product Passport</option>
