--- a/directories/fiware-summit/agenda/filters.html
+++ b/directories/fiware-summit/agenda/filters.html
@@ -73,6 +73,7 @@
     <select name="" id="filterPrefix">
       <option value="*">Types</option>
           <option value='agreement'>Agreement</option>
+          <option value='practical'>Practical</option>
           <option value='training'>Training</option>
     </select>
   </div> -->
@@ -84,7 +85,7 @@
           <option value='suna-akbayir'>Suna Akbayir</option>
           <option value='joäo-bastos'>Joäo Bastos</option>
           <option value='massimo-bertoncini'>Massimo Bertoncini</option>
-          <option value='vnith-bhandari'>Vnith Bhandari</option>
+          <option value='vinith-bhandari'>Vinith Bhandari</option>
           <option value='david-campo'>David Campo</option>
           <option value='chandra-challagonda'>Chandra Challagonda</option>
           <option value='javier-conde'>Javier Conde</option>
@@ -104,10 +105,13 @@ Megumi Suzuki</option>
           <option value='yasunori-mochizuki'>Yasunori Mochizuki</option>
           <option value='sashiko-muto'>Sashiko Muto</option>
           <option value='khalid-ouakka'>Khalid Ouakka</option>
+          <option value='manfredi-pistone'>Manfredi Pistone</option>
           <option value='matteo-repetto'>Matteo Repetto</option>
           <option value='alessandro-rossi'>Alessandro Rossi</option>
           <option value='björn-schwarze'>Björn Schwarze</option>
           <option value='thimo-thoeye'>Thimo Thoeye</option>
+          <option value='stefan-wiedemann'>Stefan Wiedemann</option>
+          <option value='ken-zangelin'>Ken Zangelin</option>
     </select>
   </div>
 </div>
