--- a/directories/fiware-summit/agenda/program/sitemap.html
+++ b/directories/fiware-summit/agenda/program/sitemap.html
@@ -98,17 +98,17 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/introduction-to-iot-agents.html">Introduction to IoT Agents</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/data-as-a-strategic-asset--lessons-from-porto-s-urban-platform-and-the-beopen-project.html">Data as a Strategic Asset: Lessons from Porto’s Urban Platform and the BeOpen Project</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/coffee-break.html">Coffee Break</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/sdg-driven-solutions-for-a-sustainable-world-cup-legacy.html">SDG-Driven Solutions for a Sustainable World Cup Legacy</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/digital-product-passports-for-a-more-circular--transparent-and-traceable-manufacturing---international-trade.html">Digital Product Passports for a More Circular, Transparent and Traceable Manufacturing &amp; International Trade</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/from-silos-to-synergy--building-smart-governance-with-interoperability.html">From Silos to Synergy: Building Smart Governance with Interoperability</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/smart-data-spaces-for-high-profile-events--enabling-interoperability--trust--and-real-time-insight.html">Smart Data Spaces for High Profile Events: Enabling Interoperability, Trust, and Real-Time Insight</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/digital-twins-for-real-time-optimization-of-sporting-mega-events.html">Digital Twins for Real-Time Optimization of Sporting Mega-Events</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/european-local-digital-twin-toolbox-project---advancing-the-digital-maturity-of-cities.html">European Local Digital Twin Toolbox Project - Advancing the Digital Maturity of Cities</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/practical-1---ngsi-ld-farm-exercises.html">Practical 1 - NGSI-LD Farm Exercises</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/sdg-driven-solutions-for-a-sustainable-world-cup-legacy.html">SDG-Driven Solutions for a Sustainable World Cup Legacy</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/digital-product-passports-for-a-more-circular--transparent-and-traceable-manufacturing---international-trade.html">Digital Product Passports for a More Circular, Transparent and Traceable Manufacturing &amp; International Trade</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/ngsi-ld-farm-exercises.html">NGSI-LD Farm Exercises</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/building-the-future--sustainable-smart-cities-for-resilient-urban-living.html">Building the Future: Sustainable Smart Cities for Resilient Urban Living</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/rainbrain-in-belgium-cities.html">RAINBRAIN in BELGIUM Cities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/smart-monitoring-of-stormwater-retention-basins.html">Smart Monitoring of Stormwater Retention Basins</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/practical-2---connection-device--displaying-data.html">Practical 2 - Connection Device. Displaying Data</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/connection-device--displaying-data.html">Connection Device. Displaying Data</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/interoperability-between-energy-communities.html">Interoperability Between Energy Communities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/enershare---the-energy-data-space-to-facilitate-sustainable-renewable-consumer-centric-transition.html">ENERSHARE - The Energy Data Space to Facilitate Sustainable Renewable Consumer Centric Transition</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/registration-and-welcome-coffee.html">Registration and Welcome Coffee</a></li>
@@ -117,7 +117,7 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/basic-identity-and-access-management-principles-in-systems-powered-by-fiware--oauth2--pep--pdp---pap--jwt.html">Basic Identity and Access Management Principles in Systems Powered by FIWARE: OAuth2; PEP, PDP , PAP; JWT</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/exploiting-fiware-potential-for-ehds-regulation-compliance.html">Exploiting FIWARE Potential for EHDS Regulation Compliance</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/overview-of-fiware-data-space-components.html">Overview of FIWARE Data Space Components</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/practical-4----deploying-a-data-space-connector.html">Practical 4 -  Deploying a Data Space Connector</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/deploying-a-data-space-connector.html">Deploying a Data Space Connector</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/break.html">Break</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/secure-smart-city.html">Secure Smart City</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/ict-platform-and-rapid-prototyping-with-fiware.html">ICT Platform and Rapid Prototyping With FIWARE</a></li>
