--- a/directories/fiware-summit/sponsors/filters.html
+++ b/directories/fiware-summit/sponsors/filters.html
@@ -24,6 +24,7 @@
             <label for='filterCompany' class='dropdown-label'>Sponsor</label>
             <select name='filterCompany' id='filterCompany'>
                 <option value='*'>All Sponsors</option>
+                        <option value='bable'>Bable</option>
                         <option value='club-globals'>Club Globals</option>
                         <option value='iot-global-network'>Iot Global Network</option>
                         <option value='iot-now'>Iot Now</option>
