--- a/directories/fiware-summit/speakers/filters.html
+++ b/directories/fiware-summit/speakers/filters.html
@@ -51,19 +51,28 @@
                 <option value='*'>All Organisations</option>
                         <option value='addix'>ADDIX</option>
                         <option value='agricolus'>Agricolus</option>
+                        <option value='artech-international-bvba'>Artech International BVBA</option>
+                        <option value='associação-porto-digital'>Associação Porto Digital</option>
                         <option value='cnr---imati'>CNR / IMATI</option>
                         <option value='engineering'>Engineering</option>
                         <option value='ficodes'>Ficodes</option>
                         <option value='fiware-foundation'>FIWARE Foundation</option>
+                        <option value='grupotx'>GrupoTX</option>
+                        <option value='ishare-foundation'>iSHARE Foundation</option>
                         <option value='latitudo-40'>Latitudo 40</option>
                         <option value='libelium'>Libelium</option>
+                        <option value='mitsubishi-electric'>Mitsubishi Electric</option>
                         <option value='nec-corporation'>NEC Corporation</option>
                         <option value='oasc'>OASC</option>
                         <option value='parthenope-university'>Parthenope University</option>
+                        <option value='secmotic'>Secmotic</option>
                         <option value='senlab-d-o-o-'>SenLab d.o.o.</option>
                         <option value='sirus'>Sirus</option>
                         <option value='smart-cities-morocco-alliance'>Smart Cities Morocco Alliance</option>
                         <option value='ufrn'>UFRN</option>
+                        <option value='université-mohammed-v-de-rabat'>Université Mohammed V de Rabat</option>
+                        <option value='upm'>UPM</option>
+                        <option value='urban-service-provider'>Urban Service Provider</option>
             </select>
         </div>
 
@@ -72,6 +81,7 @@
             <select name='' id='filterRole' class='dropdown-last'>
                 <option value='*'>All Roles</option>
                         <option value='architect'>Architect</option>
+                        <option value='assistant-professor'>Assistant Professor</option>
                         <option value='ceo'>CEO</option>
                         <option value='chairman'>Chairman</option>
                         <option value='coo'>COO</option>
@@ -80,6 +90,7 @@
                         <option value='expert'>Expert</option>
                         <option value='fellow'>Fellow</option>
                         <option value='general-manager'>General Manager</option>
+                        <option value='head-of-unit'>Head of Unit</option>
                         <option value='lead'>Lead</option>
                         <option value='manager'>Manager</option>
                         <option value='owner'>Owner</option>
