--- a/directories/fiware-summit/agenda/filters.html
+++ b/directories/fiware-summit/agenda/filters.html
@@ -43,36 +43,41 @@
   <div class="filter-element">
     <select name="" id="filterTrack">
       <option value="*">Tracks</option>
-          <option value='ai---data-driven-urban-mngmt'>AI &amp; Data-Driven Urban Mngmt</option>
+          <option value='ai---iot'>AI &amp; IoT</option>
+          <option value='circular-economy---urban-development'>Circular Economy &amp; Urban Development</option>
+          <option value='data-spaces---interoperability'>Data Spaces &amp; Interoperability</option>
+          <option value='digital-twins---data-harmonization'>Digital Twins &amp; Data Harmonization</option>
           <option value='grand-opening'>Grand Opening</option>
           <option value='organization'>Organization</option>
-          <option value='secure-smart-city'>Secure Smart City</option>
-          <option value='smart-governance---digital-pa'>Smart Governance &amp; Digital PA</option>
+          <option value='research---development'>Research &amp; Development</option>
+          <option value='smart-governance'>Smart Governance</option>
           <option value='sustainable-smart-city'>Sustainable Smart City</option>
-          <option value='tech---trends'>Tech &amp; Trends</option>
           <option value='tech-training'>Tech Training</option>
     </select>
   </div>
   <div class="filter-element">
     <select name="" id="filterSession">
       <option value="*">Sessions</option>
-          <option value='ai-and-natural-language-for-smart-cities--turning-data-into-action'>AI and Natural Language for Smart Cities: Turning Data into Action</option>
+          <option value='ai---data-driven-cities-for-the-fifa-world-cup-2030'>AI &amp; Data-Driven Cities for the FIFA World Cup 2030</option>
+          <option value='ai---iot-for-smart-water-and-resilient-cities'>AI &amp; IoT for Smart Water and Resilient Cities</option>
+          <option value='ai-and-natural-language-for-smart-cities'>AI and Natural Language for Smart Cities</option>
+          <option value='building-smart-governance-with-interoperability'>Building Smart Governance with Interoperability</option>
           <option value='digital-product-passports---data-sovereignty-in-climate-resilient-cities'>Digital Product Passports &amp; Data Sovereignty in Climate-Resilient Cities</option>
           <option value='digital-twins-for-real-time-optimization-of-sporting-mega-events'>Digital Twins for Real-Time Optimization of Sporting Mega-Events</option>
           <option value='fiware-training'>FIWARE Training</option>
           <option value='global-fiware-use-cases-shaping-smart-cities-for-2030'>Global FIWARE Use Cases Shaping Smart Cities for 2030</option>
-          <option value='governing-trust--legal-and-data-space-frameworks-for-secure-cities-and-resilient-event-management'>Governing Trust: Legal and Data Space Frameworks for Secure Cities and Resilient Event Management</option>
-          <option value='next-generation-governance--where-smart-meets-digital'>Next-Generation Governance: Where Smart Meets Digital</option>
+          <option value='legal-and-data-space-frameworks-for-secure-cities-and-resilient-event-management'>Legal and Data Space Frameworks for Secure Cities and Resilient Event Management</option>
+          <option value='next-generation-governance'>Next-Generation Governance</option>
           <option value='official-speeches'>Official Speeches</option>
           <option value='sdg-driven-solutions-for-a-sustainable-world-cup-legacy'>SDG-Driven Solutions for a Sustainable World Cup Legacy</option>
           <option value='secure-smart-city'>Secure Smart City</option>
-          <option value='when-intelligence-meets-endurance--ai---data-driven-cities-for-the-fifa-world-cup-2030'>When Intelligence Meets Endurance: AI &amp; Data-Driven Cities for the FIFA World Cup 2030</option>
+          <option value='session-for-academic-partnerships'>Session for Academic Partnerships</option>
+          <option value='smart-data-spaces-for-high-profile-events'>Smart Data Spaces for High Profile Events</option>
     </select>
   </div>
   <!-- <div class="filter-element">
     <select name="" id="filterPrefix">
       <option value="*">Types</option>
-          <option value='agreement'>Agreement</option>
           <option value='practical'>Practical</option>
           <option value='training'>Training</option>
     </select>
@@ -84,6 +89,7 @@
           <option value='alberto-abella'>Alberto Abella</option>
           <option value='suna-akbayir'>Suna Akbayir</option>
           <option value='joäo-bastos'>Joäo Bastos</option>
+          <option value='jose-benitez'>Jose Benitez</option>
           <option value='massimo-bertoncini'>Massimo Bertoncini</option>
           <option value='vinith-bhandari'>Vinith Bhandari</option>
           <option value='david-campo'>David Campo</option>
@@ -94,22 +100,26 @@
           <option value='gert-de-tant'>Gert De Tant</option>
           <option value='amal-el-fellah-seghrouchni'>Amal El Fellah Seghrouchni</option>
           <option value='jason-fox'>Jason Fox</option>
-          <option value='rama-goparaju'>Rama Goparaju</option>
+          <option value='javier-galvez-campanelli'>Javier Galvez Campanelli</option>
+          <option value='gerardo-guarino'>Gerardo Guarino</option>
           <option value='aawatif-hayar'>Aawatif Hayar</option>
           <option value='antonio-jara'>Antonio Jara</option>
-          <option value='jin-kawasaki-megumi-suzuki'>Jin Kawasaki
-Megumi Suzuki</option>
+          <option value='jin-kawasaki'>Jin Kawasaki</option>
           <option value='jure-lampe'>Jure Lampe</option>
           <option value='frederico-lopes'>Frederico Lopes</option>
           <option value='francisco-meléndez'>Francisco Meléndez</option>
           <option value='yasunori-mochizuki'>Yasunori Mochizuki</option>
+          <option value='prof--mohamed-dafir'>Prof. Mohamed Dafir</option>
           <option value='sashiko-muto'>Sashiko Muto</option>
           <option value='khalid-ouakka'>Khalid Ouakka</option>
           <option value='manfredi-pistone'>Manfredi Pistone</option>
           <option value='matteo-repetto'>Matteo Repetto</option>
           <option value='alessandro-rossi'>Alessandro Rossi</option>
           <option value='björn-schwarze'>Björn Schwarze</option>
+          <option value='megumi-suzuki'>Megumi Suzuki</option>
           <option value='thimo-thoeye'>Thimo Thoeye</option>
+          <option value='brecht-van-de-vyvere'>Brecht Van de Vyvere</option>
+          <option value='gaetano-volpe'>Gaetano Volpe</option>
           <option value='stefan-wiedemann'>Stefan Wiedemann</option>
           <option value='ken-zangelin'>Ken Zangelin</option>
     </select>
