--- a/directories/fiware-summit/agenda/program/sitemap.html
+++ b/directories/fiware-summit/agenda/program/sitemap.html
@@ -69,15 +69,14 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/general-directorate-of-territorial-collectivities--ministry-of-interior-in-morocco.html">General Directorate of Territorial Collectivities, Ministry of Interior in Morocco</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/introduction-to-the-fiware-global-summit-and-fiware-community-news.html">Introduction to the FIWARE Global Summit and FIWARE Community News</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/aawatif-hayar--president-of-the-smart-morocco-alliance.html">Aawatif Hayar, President of the SMART Morocco Alliance</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/signing-ceremony.html">Signing Ceremony</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/coffee-break.html">Coffee Break</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/global-fiware-use-cases-shaping-smart-cities-for-2030.html">Global FIWARE Use Cases Shaping Smart Cities for 2030</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/fiware-training.html">FIWARE Training</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/introduction-to-json-ld.html">Introduction to JSON-LD</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/fiware-for-cities-from-europe-to-the-world--from-smart-to-ai-ready.html">FIWARE for Cities From Europe to the World, From Smart to AI-ready</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/sustainable-smart-city-with-environmental-sustainability-for-the-use-case-of-cartagena-for-low-emission-zones.html">Sustainable Smart City With Environmental sustainability for the Use Case of Cartagena for Low Emission Zones</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/smart-data-models-.html">Smart Data Models
-</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/smart-data-models.html">Smart Data Models</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/success-story-in-the-tenerife-island--aligning-with-environmental-sustainability.html">Success Story in the Tenerife Island, Aligning With Environmental Sustainability</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/next-generation-governance--where-smart-meets-digital.html">Next-Generation Governance: Where Smart Meets Digital</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/e-gov-moroccan-context.html">E-gov Moroccan Context</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/digital-twin-basic-programming-using-ngsi-ld--crud--registrations--subscriptions.html">Digital Twin Basic Programming using NGSI-LD: CRUD, Registrations, Subscriptions</a></li>
@@ -87,26 +86,28 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/when-intelligence-meets-endurance--ai---data-driven-cities-for-the-fifa-world-cup-2030.html">When Intelligence Meets Endurance: AI &amp; Data-Driven Cities for the FIFA World Cup 2030</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/unlocking-the-potential-of-data-spaces-for-smart-cities-and-communities.html">Unlocking the Potential of Data Spaces for Smart Cities and Communities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/blue-cities-of-tomorrow--ai---iot-for-smart-water-and-resilient-cities.html">Blue Cities of Tomorrow: AI &amp; IoT for Smart Water and Resilient Cities</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/ai-and-natural-language-for-smart-cities--turning-data-into-action.html">AI and Natural Language for Smart Cities: Turning Data into Action</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/earthdatainsight--turning-satellite-data-into-smart-decisions-for-climate-resilient-cities.html">EarthDataInsight: Turning Satellite Data into Smart Decisions for Climate-Resilient Cities</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/smart-data-spaces-for-high-profile-events--enabling-interoperability--trust--and-real-time-insight.html">Smart Data Spaces for High Profile Events: Enabling Interoperability, Trust, and Real-Time Insight</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/digital-twin-intermediate-programming-using-ngsi-ld--temporal-operations--geofencing.html">Digital Twin Intermediate Programming Using NGSI-LD: Temporal Operations, Geofencing</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/enabling-interoperable-data-exchange-between-systems.html">Enabling Interoperable Data Exchange Between Systems</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/from-smart-meters-to-digital-twins--how-fiwarebox-simplifies-and-accelerates-fiware-based-smart-city-data-integration-and-visualization-on-a-budget.html">From Smart Meters to Digital Twins: How FIWAREBox Simplifies and Accelerates FIWARE-Based Smart City Data Integration and Visualization on a Budget</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/improving-urban-management-through-generative-ai-and-fiware.html">Improving Urban Management through Generative AI and FIWARE</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/orchestrating-data-sovereignty-for-circular-and-climate-resilient-cities.html">Orchestrating Data Sovereignty for Circular and Climate-Resilient Cities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/opensustie-and-futrhub-collaborations--shaping-future-of-smart-cities-with-smart-buildings.html">OpenSUSTIE and FUTRHUB Collaborations: Shaping Future of Smart Cities with Smart Buildings</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/deploying-real-time-air-monitoring-for-emissions-accountability-and-climate-resilience.html">Deploying Real-Time Air Monitoring for Emissions Accountability and Climate Resilience</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/asteriot--a-scalable-fiware-based-platform-for-smart-water-management-and-early-warning-systems.html">AsterIoT: A Scalable FIWARE-Based Platform for Smart Water Management and Early Warning Systems</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/introduction-to-iot-agents.html">Introduction to IoT Agents</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/data-as-a-strategic-asset--lessons-from-porto-s-urban-platform-and-the-beopen-project.html">Data as a Strategic Asset: Lessons from Porto’s Urban Platform and the BeOpen Project</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/coffee-break.html">Coffee Break</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/from-silos-to-synergy--building-smart-governance-with-interoperability.html">From Silos to Synergy: Building Smart Governance with Interoperability</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/smart-data-spaces-for-high-profile-events--enabling-interoperability--trust--and-real-time-insight.html">Smart Data Spaces for High Profile Events: Enabling Interoperability, Trust, and Real-Time Insight</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/digital-twins-for-real-time-optimization-of-sporting-mega-events.html">Digital Twins for Real-Time Optimization of Sporting Mega-Events</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/european-local-digital-twin-toolbox-project---advancing-the-digital-maturity-of-cities.html">European Local Digital Twin Toolbox Project - Advancing the Digital Maturity of Cities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/sdg-driven-solutions-for-a-sustainable-world-cup-legacy.html">SDG-Driven Solutions for a Sustainable World Cup Legacy</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/digital-product-passports-for-a-more-circular--transparent-and-traceable-manufacturing---international-trade.html">Digital Product Passports for a More Circular, Transparent and Traceable Manufacturing &amp; International Trade</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/ai-and-natural-language-for-smart-cities--turning-data-into-action.html">AI and Natural Language for Smart Cities: Turning Data into Action</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/earthdatainsight--turning-satellite-data-into-smart-decisions-for-climate-resilient-cities.html">EarthDataInsight: Turning Satellite Data into Smart Decisions for Climate-Resilient Cities</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/from-silos-to-synergy--building-smart-governance-with-interoperability.html">From Silos to Synergy: Building Smart Governance with Interoperability</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/digital-twins-for-real-time-optimization-of-sporting-mega-events.html">Digital Twins for Real-Time Optimization of Sporting Mega-Events</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/european-local-digital-twin-toolbox-project---advancing-the-digital-maturity-of-cities.html">European Local Digital Twin Toolbox Project - Advancing the Digital Maturity of Cities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/ngsi-ld-farm-exercises.html">NGSI-LD Farm Exercises</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/building-the-future--sustainable-smart-cities-for-resilient-urban-living.html">Building the Future: Sustainable Smart Cities for Resilient Urban Living</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/rainbrain-in-belgium-cities.html">RAINBRAIN in BELGIUM Cities</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/improving-urban-management-through-generative-ai-and-fiware.html">Improving Urban Management through Generative AI and FIWARE</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/rainbrrain-in-belgium-cities.html">Rainbrrain in Belgium Cities</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/from-smart-cities-to-digital-cities.html">From Smart Cities to Digital Cities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/smart-monitoring-of-stormwater-retention-basins.html">Smart Monitoring of Stormwater Retention Basins</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/connection-device--displaying-data.html">Connection Device. Displaying Data</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/interoperability-between-energy-communities.html">Interoperability Between Energy Communities</a></li>
@@ -127,8 +128,8 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/fiware-turtle-sim-using-a-ros2-iot-agent.html">FIWARE Turtle SIM Using a ROS2 IoT Agent</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/ddos-with-orion-ld.html">DDOS With Orion-LD</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/lunch.html">Lunch</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/fiware-scientific-advisory-board---session-for-academic-partnerships.html">FIWARE Scientific Advisory Board - Session for Academic Partnerships</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/options-for-data-persistence.html">Options for Data Persistence</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/university-5-0-dataspace--a-smart-campus-ecosystem-living-lab-for-ai-driven-innovation-in-the-region.html">University 5.0 Dataspace: a Smart Campus Ecosystem Living Lab for AI-driven Innovation in the Region</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/extended-fiware-catalog-compoinents.html">Extended FIWARE Catalog Compoinents</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/closing.html">Closing</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/training-certificates.html">Training Certificates</a></li>
