Agenda + Speakers update

--- a/directories/fiware-summit/agenda/agenda.html
+++ b/directories/fiware-summit/agenda/agenda.html
@@ -190,12 +190,12 @@
 
 <div class='grid-item grand-opening official-speeches aawatif-hayar 22-may'>
     <div class="gridElementTextContainer">
-      <a href="./program-details-summary?id=aawatif-hayar--president-of-the-smart-morocco-alliance">
+      <a href="./program-details-summary?id=aawatif-hayar--chairman-of-the-smart-cities-morocco-alliance">
         <div class="chip-track">
           <div class="track light-orange">Grand Opening</div>
           
         </div>
-        <p class="panel-title light-orange ">Aawatif Hayar, President of the SMART Morocco Alliance</p> 
+        <p class="panel-title light-orange ">Aawatif Hayar, Chairman of the Smart Cities Morocco Alliance</p> 
         <span class="excerpt">Official Speeches</span>
         <div class="panel-info">
           <div class="date-time">
