--- a/directories/fiware-summit/agenda/calendar.html
+++ b/directories/fiware-summit/agenda/calendar.html
@@ -130,7 +130,7 @@ li {
 		</li>
 		<li>
             
-			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Aawatif Hayar, President of the SMART Morocco Alliance&details=Grand Opening - Official Speeches++++Speakers:+Aawatif Hayar,,&ctz=Africa/Casablanca&location=Auditorium&dates=20250522T100000/20250522T101000">Aawatif Hayar, President of the SMART Morocco Alliance</a>
+			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Aawatif Hayar, Chairman of the Smart Cities Morocco Alliance&details=Grand Opening - Official Speeches++++Speakers:+Aawatif Hayar,,&ctz=Africa/Casablanca&location=Auditorium&dates=20250522T100000/20250522T101000">Aawatif Hayar, Chairman of the Smart Cities Morocco Alliance</a>
              - Grand Opening - Official Speeches
 			<div class="date-time">
 	            <span class="separator-dot"></span>
