--- a/directories/fiware-summit/agenda/program/sitemap.html
+++ b/directories/fiware-summit/agenda/program/sitemap.html
@@ -68,7 +68,7 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/amal-el-fellah-seghrouchni--minister-of-digital-transition-and-administrative-reform.html">Amal El Fellah Seghrouchni, Minister of Digital Transition and Administrative Reform</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/general-directorate-of-territorial-collectivities--ministry-of-interior-in-morocco.html">General Directorate of Territorial Collectivities, Ministry of Interior in Morocco</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/introduction-to-the-fiware-global-summit-and-fiware-community-news.html">Introduction to the FIWARE Global Summit and FIWARE Community News</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/aawatif-hayar--president-of-the-smart-morocco-alliance.html">Aawatif Hayar, President of the SMART Morocco Alliance</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/aawatif-hayar--chairman-of-the-smart-cities-morocco-alliance.html">Aawatif Hayar, Chairman of the Smart Cities Morocco Alliance</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/coffee-break.html">Coffee Break</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/global-fiware-use-cases-shaping-smart-cities-for-2030.html">Global FIWARE Use Cases Shaping Smart Cities for 2030</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/fiware-training.html">FIWARE Training</a></li>
