Agenda-speaker update

--- a/directories/fiware-summit/agenda/filters.html
+++ b/directories/fiware-summit/agenda/filters.html
@@ -60,15 +60,19 @@
       <option value="*">Sessions</option>
           <option value='ai---data-driven-cities-for-the-fifa-world-cup-2030'>AI &amp; Data-Driven Cities for the FIFA World Cup 2030</option>
           <option value='ai---iot-for-smart-water-and-resilient-cities'>AI &amp; IoT for Smart Water and Resilient Cities</option>
+          <option value='ai---machine-learning'>AI &amp; Machine Learning</option>
           <option value='ai-and-natural-language-for-smart-cities'>AI and Natural Language for Smart Cities</option>
           <option value='building-smart-governance-with-interoperability'>Building Smart Governance with Interoperability</option>
+          <option value='core-concepts'>Core Concepts</option>
+          <option value='data-spaces---security'>Data Spaces &amp; Security</option>
           <option value='digital-product-passports---data-sovereignty-in-climate-resilient-cities'>Digital Product Passports &amp; Data Sovereignty in Climate-Resilient Cities</option>
           <option value='digital-twins-for-real-time-optimization-of-sporting-mega-events'>Digital Twins for Real-Time Optimization of Sporting Mega-Events</option>
-          <option value='fiware-training'>FIWARE Training</option>
+          <option value='fiware-catalog'>FIWARE Catalog</option>
           <option value='global-fiware-use-cases-shaping-smart-cities-for-2030'>Global FIWARE Use Cases Shaping Smart Cities for 2030</option>
           <option value='legal-and-data-space-frameworks-for-secure-cities-and-resilient-event-management'>Legal and Data Space Frameworks for Secure Cities and Resilient Event Management</option>
           <option value='next-generation-governance'>Next-Generation Governance</option>
           <option value='official-speeches'>Official Speeches</option>
+          <option value='robotics---iot-agents'>Robotics &amp; IoT Agents</option>
           <option value='sdg-driven-solutions-for-a-sustainable-world-cup-legacy'>SDG-Driven Solutions for a Sustainable World Cup Legacy</option>
           <option value='secure-smart-city'>Secure Smart City</option>
           <option value='session-for-academic-partnerships'>Session for Academic Partnerships</option>
@@ -88,37 +92,34 @@
       <option value="*">Speakers</option>
           <option value='alberto-abella'>Alberto Abella</option>
           <option value='suna-akbayir'>Suna Akbayir</option>
-          <option value='joäo-bastos'>Joäo Bastos</option>
-          <option value='jose-benitez'>Jose Benitez</option>
+          <option value='joão-bastos'>João Bastos</option>
+          <option value='jose-benítez'>Jose Benítez</option>
           <option value='massimo-bertoncini'>Massimo Bertoncini</option>
           <option value='vinith-bhandari'>Vinith Bhandari</option>
           <option value='david-campo'>David Campo</option>
           <option value='chandra-challagonda'>Chandra Challagonda</option>
-          <option value='javier-conde'>Javier Conde</option>
+          <option value='javier-conde-díaz'>Javier Conde Díaz</option>
           <option value='luigi-coppolino'>Luigi Coppolino</option>
           <option value='andrea-cruciani'>Andrea Cruciani</option>
+          <option value='mohamed-dafir'>Mohamed Dafir</option>
           <option value='gert-de-tant'>Gert De Tant</option>
           <option value='amal-el-fellah-seghrouchni'>Amal El Fellah Seghrouchni</option>
           <option value='jason-fox'>Jason Fox</option>
           <option value='javier-galvez-campanelli'>Javier Galvez Campanelli</option>
-          <option value='gerardo-guarino'>Gerardo Guarino</option>
+          <option value='gerardo-guarino-f-'>Gerardo Guarino F.</option>
           <option value='aawatif-hayar'>Aawatif Hayar</option>
           <option value='antonio-jara'>Antonio Jara</option>
-          <option value='jin-kawasaki'>Jin Kawasaki</option>
           <option value='jure-lampe'>Jure Lampe</option>
           <option value='frederico-lopes'>Frederico Lopes</option>
           <option value='francisco-meléndez'>Francisco Meléndez</option>
           <option value='yasunori-mochizuki'>Yasunori Mochizuki</option>
-          <option value='prof--mohamed-dafir'>Prof. Mohamed Dafir</option>
           <option value='sashiko-muto'>Sashiko Muto</option>
           <option value='khalid-ouakka'>Khalid Ouakka</option>
           <option value='manfredi-pistone'>Manfredi Pistone</option>
           <option value='matteo-repetto'>Matteo Repetto</option>
           <option value='alessandro-rossi'>Alessandro Rossi</option>
           <option value='björn-schwarze'>Björn Schwarze</option>
-          <option value='megumi-suzuki'>Megumi Suzuki</option>
-          <option value='thimo-thoeye'>Thimo Thoeye</option>
-          <option value='brecht-van-de-vyvere'>Brecht Van de Vyvere</option>
+          <option value='brecht-van-de-vyvere'>Brecht van de Vyvere</option>
           <option value='stefan-wiedemann'>Stefan Wiedemann</option>
           <option value='ken-zangelin'>Ken Zangelin</option>
     </select>
