--- a/directories/fiware-summit/speakers/filters.html
+++ b/directories/fiware-summit/speakers/filters.html
@@ -54,9 +54,11 @@
                         <option value='artech-international-bvba'>Artech International BVBA</option>
                         <option value='associação-porto-digital'>Associação Porto Digital</option>
                         <option value='cnr---imati'>CNR / IMATI</option>
+                        <option value='digital-development-agency--add-'>Digital Development Agency (ADD)</option>
                         <option value='engineering'>Engineering</option>
                         <option value='ficodes'>Ficodes</option>
                         <option value='fiware-foundation'>FIWARE Foundation</option>
+                        <option value='government-of-morocco'>Government of Morocco</option>
                         <option value='grupotx'>GrupoTX</option>
                         <option value='ishare-foundation'>iSHARE Foundation</option>
                         <option value='latitudo-40'>Latitudo 40</option>
@@ -93,6 +95,7 @@
                         <option value='head-of-unit'>Head of Unit</option>
                         <option value='lead'>Lead</option>
                         <option value='manager'>Manager</option>
+                        <option value='minister-delegate'>Minister Delegate</option>
                         <option value='owner'>Owner</option>
                         <option value='professor'>Professor</option>
                         <option value='researcher'>Researcher</option>
