--- a/directories/fiware-summit/agenda/agenda.html
+++ b/directories/fiware-summit/agenda/agenda.html
@@ -12,7 +12,7 @@
           <div class="date-time">
             <h3 class="date">22 May</h3>
             <span class="separator-dot"></span>
-            <span class="time">8:30 am – 6:00 pm</span>
+            <span class="time">8:30 am – 9:00:am</span>
           </div>
           <span class="separator-dot"></span>
           <span class="place">Entrance</span>
