--- a/directories/fiware-summit/agenda/calendar.html
+++ b/directories/fiware-summit/agenda/calendar.html
@@ -64,11 +64,11 @@ li {
 	<ul>
 		<li>
             <br/>
-			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Registration&details=Organization&ctz=Africa/Casablanca&location=Entrance&dates=20250522T083000/20250522T180000">Registration</a>
+			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Registration&details=Organization&ctz=Africa/Casablanca&location=Entrance&dates=20250522T083000/20250522T090000">Registration</a>
             
 			<div class="date-time">
 	            <span class="separator-dot"></span>
-	            <span class="time">8:30 am - 6:00 pm</span>
+	            <span class="time">8:30 am - 9:00:am</span>
 	        </div>
 	        <div class="place">Entrance</div>
             <br/>
